# modelbuilder

./: .gitignore  LICENSE  README.md  app.py  config.py  designfile.py  dev_guide.md  pyproject.toml  requierments.txt  requirements.txt  tox.ini
assets/: datatablecss.css
callbacks/: allometry.py  base.py  covariates.py  datainfo.py  error_model.py  estimation.py  parameter_variability.py  parameters.py  structural.py
src/modelbuilder/: app.py  config.py  designfile.py
src/modelbuilder/assets/: datatablecss.css
src/modelbuilder/callbacks/: allometry.py  base.py  covariates.py  datainfo.py  error_model.py  estimation.py  general.py  parameter_variability.py  parameters.py  structural.py
src/modelbuilder/design/: base.py  covariates.py  datainfo.py  error_model.py  general.py  main.py  model_view.py  parameter_variability.py  parameters.py  structural.py  style_elements.py
src/modelbuilder/internals/: help_functions.py  model_state.py
tests/model_state/: test_model_state.py
