[project]
name = "pharmpy-modelbuilder"
version = "0.1"
dependencies = [
    "dash",
    "dash-bootstrap-components",
    "pharmpy-core>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.gui-scripts]
pharmpy-modelbuilder = "modelbuilder.app:run"

[tool.black]
line-length = 100
skip-string-normalization = 1

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
